--- a/flash/index.html
+++ b/flash/index.html
@@ -25,7 +25,7 @@ title: "FLASH FICTION"
     <span class="previous">Previous</span>
   {% endif %}
   <span class="page_number ">
-    Page: {{ paginator.page }} of {{ paginator.total_pages }}
+    {{ paginator.page }} of {{ paginator.total_pages }}
   </span>
   {% if paginator.next_page %}
     <a href="{{ paginator.next_page_path }}" class="next">Next</a>
