Adding a "post" category

--- a/flash/index.html
+++ b/flash/index.html
@@ -5,13 +5,15 @@ title: "FLASH FICTION"
 
 <ul>
   {% for post in paginator.posts %}
-    <div class="story-summary">
-      <a class = "post-title" href="{{ post.url }}">{{ post.title }}</a>
-      <p><i>By {{ post.author }}</i></p>
-      {{ post.excerpt }}
-      <a class = "post-link" href="{{ post.url }}">Read more...</a>
-      <br>
-    </div>
+    {% if post.categories contains 'post' %}
+      <div class="story-summary">
+        <a class = "post-title" href="{{ post.url }}">{{ post.title }}</a>
+        <p><i>By {{ post.author }}</i></p>
+        {{ post.excerpt }}
+        <a class = "post-link" href="{{ post.url }}">Read more...</a>
+        <br>
+      </div>
+    {% endif %}
   {% endfor %}
 </ul>
 
