--- a/flash/index.html
+++ b/flash/index.html
@@ -4,8 +4,7 @@ title: "FLASH FICTION"
 ---
 
 <ul>
-  {% if post.categories contains 'story' %}
-    {% for post in paginator.posts %}
+  {% for post in site.categories.blog %}
       <div class="story-summary">
         <a class = "post-title" href="{{ post.url }}">{{ post.title }}</a>
         <p><i>By {{ post.author }}</i></p>
@@ -14,24 +13,4 @@ title: "FLASH FICTION"
         <br>
       </div>
     {% endfor %}
-  {% endif %}
 </ul>
-
-<!-- Pagination links -->
-<div class="pagination">
-  {% if paginator.previous_page %}
-    <a href="{{ paginator.previous_page_path }}" class="previous">
-      Previous
-    </a>
-  {% else %}
-    <span class="previous">Previous</span>
-  {% endif %}
-  <span class="page_number ">
-    {{ paginator.page }} of {{ paginator.total_pages }}
-  </span>
-  {% if paginator.next_page %}
-    <a href="{{ paginator.next_page_path }}" class="next">Next</a>
-  {% else %}
-    <span class="next ">Next</span>
-  {% endif %}
-</div>
