--- a/flash/index.html
+++ b/flash/index.html
@@ -4,7 +4,7 @@ title: "FLASH FICTION"
 ---
 
 <ul>
-  {% for post in site.categories.blog %}
+  {% for post in site.categories.story %}
       <div class="story-summary">
         <a class = "post-title" href="{{ post.url }}">{{ post.title }}</a>
         <p><i>By {{ post.author }}</i></p>
