--- a/flash/index.html
+++ b/flash/index.html
@@ -1,8 +1,8 @@
 ---
 layout: "exerpts"
-title: "FLASH FICTION test4"
+title: "FLASH FICTION test5"
 paginate:
-  category: story
+  category: 'story'
 ---
 
 <ul>
