--- a/flash/index.html
+++ b/flash/index.html
@@ -1,8 +1,8 @@
 ---
 layout: "exerpts"
-title: "FLASH FICTION test10"
+title: "FLASH FICTION test11"
 paginate:
-  category: story
+  category: blog
 ---
 
 <ul>
