--- a/hero-souffle.html
+++ b/hero-souffle.html
@@ -195,6 +195,7 @@ span{
             <li><a class="nav-link" href="https://stingerstories.com/index.html" class=header-links>HOME</a></li>
             <li><a class="nav-link" href="https://stingerstories.com/about.html" class=header-links>ABOUT</a></li>
             <li><a class="nav-link" href="https://stingerstories.com/flash/index.html" class=header-links>FLASH FICTION</a></li>
+            <li><a class="nav-link" href="https://stingerstories.com/blog/index.html" class=header-links>BLOG</a></li>
             <li><a class="nav-link" href="https://stingerstories.com/submit.html" class=header-links>SUBMIT</a></li>
         </ul>
     </nav>
