Fixed excerpt on blog post

--- a/why-does-the-world-need-another-literary-magazine.html
+++ b/why-does-the-world-need-another-literary-magazine.html
@@ -212,9 +212,7 @@ span{
 
         <div id="body-text-div">
 
-            <p id="description"> <!--more-->
-
-<p>On August 8th, 2020, I launched a literary magazine named Stinger Stories.</p>
+            <p id="description"> <p>On August 8th, 2020, I launched a literary magazine named Stinger Stories.</p>
 
 <p>Friends, family, and strangers alike asked — Why?<!--more--></p>
 
