Fix to title_suffix

--- a/flash/page3/index.html
+++ b/flash/page3/index.html
@@ -245,7 +245,7 @@ h2{
 
     <div id="body-div">
         <div id="logo-div">
-            <h2> FLASH FICTION - page 3 </h2>
+            <h2> FLASH FICTION </h2>
             <img id="logo" src="https://stingerstories.com/assets/images/Logo.png" alt="Stinger Stories Logo">
         </div>
 
