Changed page title to match h1

--- a/the-apocalypse.html
+++ b/the-apocalypse.html
@@ -201,7 +201,7 @@ span{
     </nav>
 </header>
 
-    <title>Stinger Stories</title> <!--Controls what shows up in the webpage tab. site.title is in the config file-->
+    <title>The Apocalypse</title> <!--Controls what shows up in the webpage tab. site.title is in the config file-->
 
     <div id="body-div">
         <div id="logo-div">
