Added second blog post

--- a/404.html
+++ b/404.html
@@ -90,7 +90,7 @@
     }
 
     /*Overwrites some code that Jekyll inserts that makes lists padded on the left.*/
-    ul {
+    nav ul {
     padding-inline-start: 0;
     }
 
