--- a/why-does-the-world-need-another-literary-magazine.html
+++ b/why-does-the-world-need-another-literary-magazine.html
@@ -90,7 +90,7 @@
     }
 
     /*Overwrites some code that Jekyll inserts that makes lists padded on the left.*/
-    ul {
+    nav ul {
     padding-inline-start: 0;
     }
 
