Minor title update

--- a/does-the-world-need-another-literary-magazine.html
+++ b/does-the-world-need-another-literary-magazine.html
@@ -201,11 +201,11 @@ span{
     </nav>
 </header>
 
-    <title>Why Does the World Need Another Literary Magazine?</title> <!--Controls what shows up in the webpage tab. site.title is in the config file-->
+    <title>Does the World Need Another Literary Magazine?</title> <!--Controls what shows up in the webpage tab. site.title is in the config file-->
 
     <div id="body-div">
         <div id="logo-div">
-            <h1>Why Does the World Need Another Literary Magazine?</h1>
+            <h1>Does the World Need Another Literary Magazine?</h1>
             
             
         </div>
