minor content edit

--- a/where-to-submit-short-stories.html
+++ b/where-to-submit-short-stories.html
@@ -212,7 +212,7 @@ span{
 
         <div id="body-text-div">
 
-            <p id="description"> <p>You’ve put in the time to write, edit, re-edit your masterpiece. In the process you have consumed more coffee than you care to admit. Now the hard part - finding the perfect publication to submit your short story.<!--more--> Fortunately, we have put together a list of our favorite online magazines and databases to help you find the perfect home for your brainchild.</p>
+            <p id="description"> <p>You’ve put in the time to write, edit, and re-edit your masterpiece. In the process you have consumed more coffee than you care to admit. Now the hard part - finding the perfect publication to submit your short story.<!--more--> Fortunately, we have put together a list of our favorite online magazines and databases to help you find the perfect home for your brainchild.</p>
 
 <p><b>List of our favorite publications</b></p>
 <ul>
