--- a/Fwd-Do-No-Forward.html
+++ b/Fwd-Do-No-Forward.html
@@ -214,17 +214,27 @@ span{
 
         <div id="body-text-div">
 
-            <p id="description"> <p>From: “Marion Yearwood” &lt;lastcosmonaut.3000@ISStationmail.com4&gt;
-Sent: Saturday, August 28, 2066, 12:08 PM IST
-To: “Dave Yearwood” <a href="mailto:astrohusband33@hotmail.com">astrohusband33@hotmail.com</a>
-Subject: Fwd:Do Not Forward [Confidential]
-FYI
-–
-From: “ISS CFO” &lt;ISSstationCFO@ISStationmail.com4&gt;
-Sent: Tuesday, August 17, 2066 3:48 PM IST
-To: “Marion Yearwood” &lt;lastcosmonaut.3000@ISStationmail.com4&gt;
-CC: “ISS Accounting” &lt;ISS.Accounting@ISStationmail.com4&gt;
-Subject: Do Not Forward [Confidential]</p>
+            <p id="description"> <p>From: “Marion Yearwood” &lt;lastcosmonaut.3000@ISStationmail.com4&gt;</p>
+
+<p>Sent: Saturday, August 28, 2066, 12:08 PM IST</p>
+
+<p>To: “Dave Yearwood” &lt;astrohusband33@hotmail.com4&gt;</p>
+
+<p>Subject: Fwd:Do Not Forward [Confidential]</p>
+
+<p>FYI</p>
+
+<p>--</p>
+
+<p>From: “ISS CFO” &lt;ISSstationCFO@ISStationmail.com4&gt;</p>
+
+<p>Sent: Tuesday, August 17, 2066 3:48 PM IST</p>
+
+<p>To: “Marion Yearwood” &lt;lastcosmonaut.3000@ISStationmail.com4&gt;</p>
+
+<p>CC: “ISS Accounting” &lt;ISS.Accounting@ISStationmail.com4&gt;</p>
+
+<p>Subject: Do Not Forward [Confidential]</p>
 
 <p>Dear Cpt. Yearwood,</p>
 
