Minor edit to story

--- a/Fwd-Do-No-Forward.html
+++ b/Fwd-Do-No-Forward.html
@@ -220,7 +220,8 @@ span{
 
 <p>To: “Dave Yearwood” &lt;astrohusband33@hotmail.com4&gt;</p>
 
-<p>Subject: Fwd:Do Not Forward [Confidential]</p>
+<p>Subject: Fwd:Do Not Forward [Confidential]
+<!--more--></p>
 
 <p>FYI</p>
 
@@ -240,7 +241,7 @@ span{
 
 <p>I hope this email finds you well.</p>
 
-<p>We’ve reviewed your request for an atmosphere with 21% O2<!--more-->, unfortunately, the Station’s Accounting department is currently unable to process these requests due to a significant backlog in terrestrial requests.</p>
+<p>We’ve reviewed your request for an atmosphere with 21% O2, unfortunately, the Station’s Accounting department is currently unable to process these requests due to a significant backlog in terrestrial requests.</p>
 
 <p>Until they are able to review your request—estimated two weeks minimum—we hope that the current levels (17%, right?) will be sufficient. I know this was not the reply that you were hoping for, but please understand that we are working around the clock down here to maintain systems that were never intended to sustain life for more than a few 1000 years. Consider yourself lucky that you’re up there!</p>
 
