--- a/Listen.html
+++ b/Listen.html
@@ -216,24 +216,31 @@ span{
 
             <p id="description"> <p>Do you hear the crying?</p>
 
-<p>In the streets weeping comes from
-burning rubber, broken glass, twisted metal.<!--more--></p>
+<p>    In the streets weeping comes from</p>
 
-<p>Believers know that this is The End; 
-they are trapped on earth.</p>
+<p>    burning rubber, broken glass, twisted metal.<!--more--></p>
 
-<p>Locked out of salvation they weep, 
-abandoned along with the sinners.</p>
+<p>Believers know that this is The End;</p>
 
-<p>The world laments as unspeakable things stir,
-leaving their dark hidden places.</p>
+<p>they are trapped on earth.</p>
 
-<p>The hospitals are full,
-But the ambulances won’t stop coming in,</p>
+<p>    Locked out of salvation they weep,</p>
 
-<p>Listen to the pain of a helpless world
-Hear their sorrow.
-You can’t ignore it.</p>
+<p>    abandoned along with the sinners.</p>
+
+<p>The world laments as unspeakable things stir,</p>
+
+<p>leaving their dark hidden places.</p>
+
+<p>    The hospitals are full,</p>
+
+<p>    But the ambulances won’t stop coming in,</p>
+
+<p>Listen to the pain of a helpless world</p>
+
+<p>    Hear their sorrow.</p>
+
+<p>    You can’t ignore it.</p>
 </p>
         </div>
     </div>
