--- a/flash/index.html
+++ b/flash/index.html
@@ -257,8 +257,9 @@ h2{
         <p><i>By Bevin Torres</i></p>
         <p>Do you hear the crying?</p>
 
-<p>In the streets weeping comes from
-burning rubber, broken glass, twisted metal.</p>
+<p>    In the streets weeping comes from</p>
+
+<p>    burning rubber, broken glass, twisted metal.</p>
 
 
         <a class = "post-link" href="/Listen">Read more...</a>
