Updated a blog post

--- a/where-to-submit-short-stories.html
+++ b/where-to-submit-short-stories.html
@@ -217,6 +217,7 @@ span{
 <p><b>List of our favorite publications</b></p>
 <ul>
     <li><a href="https://runebear.com">Rune Bear</a> accepts science fiction and fantasy stories with 300 or fewer words. They publish one story each week. Be sure to check out their monthly "drabble" contest to submit your story of exactly 100 words matching the chosen theme.</li>
+    <li><a href="gohavok.com">Havok</a> accepts fiction of any genre between 300 and 1,000 words. Each weekday has a different theme, from Mystery Monday to Fantasy Friday. They also have a seasonal theme that regularly changes.</li>
 </ul>
 
 <p><b>Databases of publications</b></p>
