--- a/flash/index.html
+++ b/flash/index.html
@@ -254,7 +254,7 @@ h2{
     
       <div class="story-summary">
         <a class = "post-title" href="/History-Repeating">History Repeating</a>
-        <p><i>By R. S. Pyne</i></p>
+        <p><i>By R S Pyne</i></p>
         <p>It was the thirty-seventh day of new-September, only another seven until payday. Crew Boss Tyrell Vargas watched the least competent member of his squad almost sever his air hose and blow them all to hell and back.</p>
 
 
