Fixed story formatting

--- a/History-Repeating.html
+++ b/History-Repeating.html
@@ -214,10 +214,13 @@ span{
 
         <div id="body-text-div">
 
-            <p id="description"> <p>It was the thirty-seventh day of new-September, only another seven until payday. Crew Boss Tyrell Vargas watched the least competent member of his squad almost sever his air hose and blow them all to hell and back.<!--more-->
-“Concentrate,” he roared through the comm-link, “or you’re fired. Last warning – I won’t tell you again.”
-On this job, that meant a one way ticket off this gods forsaken hole of a planet, fired from the mouth of an anti-matter cannon. His employers had heard all about rights for their workers and wanted nothing to do with them. 
-His boot stirred the ochre colored dust and revealed a few shards of pottery, remnants from the last civilization to rise and fall thousands of years before humans launched themselves into space. Ares Nine had not always been a dead world and something spoke to Vargas every night, whispering in an unfamiliar language when sleep would not come – the urgency in its tone clear even if he had no idea what it said. A dormant psychic ability, above average grade according to the corps assessment, meant that ghosts of the past swarmed around him like asteroid miners given a thirty-eight hour pass. They tried to give him a message, only a lingering trace of disquiet remained when the morning shift began. Why did it feel so much like a warning?</p>
+            <p id="description"> <p>It was the thirty-seventh day of new-September, only another seven until payday. Crew Boss Tyrell Vargas watched the least competent member of his squad almost sever his air hose and blow them all to hell and back.<!--more--></p>
+
+<p>“Concentrate,” he roared through the comm-link, “or you’re fired. Last warning – I won’t tell you again.”</p>
+
+<p>On this job, that meant a one way ticket off this gods forsaken hole of a planet, fired from the mouth of an anti-matter cannon. His employers had heard all about rights for their workers and wanted nothing to do with them.</p>
+
+<p>His boot stirred the ochre colored dust and revealed a few shards of pottery, remnants from the last civilization to rise and fall thousands of years before humans launched themselves into space. Ares Nine had not always been a dead world and something spoke to Vargas every night, whispering in an unfamiliar language when sleep would not come – the urgency in its tone clear even if he had no idea what it said. A dormant psychic ability, above average grade according to the corps assessment, meant that ghosts of the past swarmed around him like asteroid miners given a thirty-eight hour pass. They tried to give him a message, only a lingering trace of disquiet remained when the morning shift began. Why did it feel so much like a warning?</p>
 </p>
         </div>
     </div>
