Updated blog post

--- a/where-to-submit-short-stories.html
+++ b/where-to-submit-short-stories.html
@@ -214,15 +214,21 @@ span{
 
             <p id="description"> <p>You’ve put in the time to write, edit, and re-edit your masterpiece. In the process you have consumed more coffee than you care to admit. Now the hard part - finding the perfect publication to submit your short story.<!--more--> Fortunately, we have put together a list of our favorite online magazines and databases to help you find the perfect home for your brainchild.</p>
 
-<p><b>List of our favorite publications</b></p>
-<ul>
-    <li><a href="https://runebear.com">Rune Bear</a> accepts science fiction and fantasy stories with 300 or fewer words. They publish one story each week. Be sure to check out their monthly "drabble" contest to submit your story of exactly 100 words matching the chosen theme.</li>
-    <li><a href="https://gohavok.com">Havok</a> accepts fiction of any genre between 300 and 1,000 words. Each weekday has a different theme, from Mystery Monday to Fantasy Friday. They also have a seasonal theme that regularly changes.</li>
-</ul>
-
 <p><b>Databases of publications</b></p>
 <ul>
-    <li><a href="https://thegrinder.diabolicalplots.com/">The Submission Grinder</a> is a completely free-to-use database of thousands of online publications (both paid and unpaid). The search feature does a great job of narrowing down your target magazines based on genre and wordcound, and you can even track your stories statuses through the submission process if you create an account (again, free!)</li>
+    <li><a target="_blank" href="https://thegrinder.diabolicalplots.com/">The Submission Grinder</a> is a completely free-to-use database of thousands of online publications (both paid and unpaid). The search feature does a great job of narrowing down your target magazines based on genre and wordcound, and you can even track your stories statuses through the submission process if you create an account (again, free!)</li>
+</ul>
+
+<p><b>Writing Forums</b></p>
+<ul>
+    <li><a target="_blank" href="https://www.sffchronicles.com/">SFF Chronicles</a> is a forum dedicated to science fiction and fantasy literature. Subforums span from book suggestions to writers workshops. Writing challenges are regularly posted including several for flash fiction. There is also an active community that reads and critiques eachothers' stories.</li>
+    <li>Reddit has several writing subreddits with large audiences interested in speculative flash fiction. Our facorites are <a target="_blank" href="https://www.reddit.com/r/flashfiction/">r/flashfiction</a>, <a target="_blank" href="https://www.reddit.com/r/scifiwriting/">r/scifiwriting</a>, and <a target="_blank" href="https://www.reddit.com/r/horrorlit/">r/horrorlit</a></li>
+</ul>
+
+<p><b>List of our favorite publications</b></p>
+<ul>
+    <li><a target="_blank" href="https://runebear.com">Rune Bear</a> accepts science fiction and fantasy stories with 300 or fewer words. They publish one story each week. Be sure to check out their monthly "drabble" contest to submit your story of exactly 100 words matching the chosen theme.</li>
+    <li><a target="_blank" href="https://gohavok.com">Havok</a> accepts fiction of any genre between 300 and 1,000 words. Each weekday has a different theme, from Mystery Monday to Fantasy Friday. They also have a seasonal theme that regularly changes.</li>
 </ul>
 </p>
         </div>
