Minor spelling fix

--- a/where-to-submit-short-stories.html
+++ b/where-to-submit-short-stories.html
@@ -222,7 +222,7 @@ span{
 <p><b>Writing Forums</b></p>
 <ul>
     <li><a target="_blank" href="https://www.sffchronicles.com/">SFF Chronicles</a> is a forum dedicated to science fiction and fantasy literature. Subforums span from book suggestions to writers workshops. Writing challenges are regularly posted including several for flash fiction. There is also an active community that reads and critiques eachothers' stories.</li>
-    <li>Reddit has several writing subreddits with large audiences interested in speculative flash fiction. Our facorites are <a target="_blank" href="https://www.reddit.com/r/flashfiction/">r/flashfiction</a>, <a target="_blank" href="https://www.reddit.com/r/scifiwriting/">r/scifiwriting</a>, and <a target="_blank" href="https://www.reddit.com/r/horrorlit/">r/horrorlit</a></li>
+    <li>Reddit has several writing subreddits with large audiences interested in speculative flash fiction. Our favorites are <a target="_blank" href="https://www.reddit.com/r/flashfiction/">r/flashfiction</a>, <a target="_blank" href="https://www.reddit.com/r/scifiwriting/">r/scifiwriting</a>, and <a target="_blank" href="https://www.reddit.com/r/horrorlit/">r/horrorlit</a></li>
 </ul>
 
 <p><b>List of our favorite publications</b></p>
