New story and author

--- a/flash/page4/index.html
+++ b/flash/page4/index.html
@@ -253,6 +253,18 @@ h2{
         <ul>
     
       <div class="story-summary">
+        <a class = "post-title" href="/the-apocalypse">The Apocalypse</a>
+        <p><i>By James Heaton</i></p>
+        <p>Four horsemen waited at the top of a hill.</p>
+
+<p>“It just doesn’t seem right,” complained the largest of the four.</p>
+
+
+        <a class = "post-link" href="/the-apocalypse">Read more...</a>
+        <br>
+      </div>
+    
+      <div class="story-summary">
         <a class = "post-title" href="/empty">Empty</a>
         <p><i>By James Heaton</i></p>
         <p>Isak pushed his mug to the end of the table hoping his waitress would notice that it was empty. He tried to focus on the packet in front of him as caffeine combatted exhaustion. A red sign flashed “Open 24 Hours”, intermittently illuminating the dark street outside his window.</p>
