--- a/flash/page4/index.html
+++ b/flash/page4/index.html
@@ -253,6 +253,16 @@ h2{
         <ul>
     
       <div class="story-summary">
+        <a class = "post-title" href="/epigraphs">Epigraphs</a>
+        <p><i>By Bevin Torres</i></p>
+        <p>“Before embarking on a journey of revenge, dig two graves.”</p>
+
+
+        <a class = "post-link" href="/epigraphs">Read more...</a>
+        <br>
+      </div>
+    
+      <div class="story-summary">
         <a class = "post-title" href="/the-apocalypse">The Apocalypse</a>
         <p><i>By James Heaton</i></p>
         <p>Four horsemen waited at the top of a hill.</p>
