Edited an author page content

--- a/joshua-jones.html
+++ b/joshua-jones.html
@@ -212,7 +212,7 @@ h2{
 
             <p id="description"> <p>Joshua Lee Andrew Jones born in the 1970’s right outside of Washington DC. Grew up in a NYC commuter town in coastal CT. Things were in balance and then the scales tipped. Epiphany struck and the examined life began early.</p>
 
-<p>He once was a professional bass player. He once was a punk. Once he was many things. Son of a preacher man and the grandson of a Federal Court judge. A curve breaker. A fool proclaiming his folly. A writer from the edges writing for the opened minded. Follow on Twitter:<a href="https://twitter.com/JLAJones">@JLAJones<a> and check out his comic book and screenwriting news at <a href="http://waywardraven.com">Wayward Raven Media<a>.</a></a></a></a></p>
+<p>He once was a professional bass player. He once was a punk. Once he was many things. Son of a preacher man and the grandson of a Federal Court judge. A curve breaker. A fool proclaiming his folly. A writer from the edges writing for the opened minded. Follow on Twitter:<a href="https://twitter.com/JLAJones">@JLAJones<a>.</a></a></p>
 </p>
             <h3>Posts</h3>
             <ul>
