--- a/flash/page4/index.html
+++ b/flash/page4/index.html
@@ -253,6 +253,18 @@ h2{
         <ul>
     
       <div class="story-summary">
+        <a class = "post-title" href="/letter-of-complaint">Letter of Complaint</a>
+        <p><i>By Karen Kiers</i></p>
+        <p>Dear Malifica,</p>
+
+<p>I am writing to you regarding the condition of your castle’s dungeon. I can honestly say it is one of the three worst dungeons I have ever seen. This comes from someone with a LOT of experience in dungeons.</p>
+
+
+        <a class = "post-link" href="/letter-of-complaint">Read more...</a>
+        <br>
+      </div>
+    
+      <div class="story-summary">
         <a class = "post-title" href="/epigraphs">Epigraphs</a>
         <p><i>By Bevin Torres</i></p>
         <p>“Before embarking on a journey of revenge, dig two graves.”</p>
