Tried to fix Chroma image

--- a/Chroma.html
+++ b/Chroma.html
@@ -214,9 +214,9 @@ span{
 
         <div id="body-text-div">
 
-            <p id="description"> <p>Running. Everyone is trying to escape at once but that just feeds their hunger.</p>
-
-<p>The multi-story garage isn’t closed in so we’re trapped but they’re free to come in.</p>
+            <p id="description"> <p>Running. Everyone is trying to escape at once but that just feeds their hunger.
+<!--more-->
+The multi-story garage isn’t closed in so we’re trapped but they’re free to come in.</p>
 
 <p>There are people being attacked. Shredded apart all around. I keep screaming that we need to stay apart. To get into cars. Separate. Be patient and they’ll go away.</p>
 
@@ -224,7 +224,7 @@ span{
 
 <p>The Chromas sense when we’re together. Small as a butterfly. Shiny and blue. They’ll find you.</p>
 
-<p><img src="/assets/Chroma.jpg" alt="Chroma Butterfly" /></p>
+<p><img id="chroma" src="https://stingerstories.com/assets/images/chroma.jpg" alt="Chroma Butterfly" /></p>
 </p>
         </div>
     </div>
