Tried to fix image name

--- a/Chroma.html
+++ b/Chroma.html
@@ -224,7 +224,7 @@ The multi-story garage isn’t closed in so we’re trapped but they’re free t
 
 <p>The Chromas sense when we’re together. Small as a butterfly. Shiny and blue. They’ll find you.</p>
 
-<p><img id="chroma" src="https://stingerstories.com/assets/images/chroma.jpg" alt="Chroma Butterfly" /></p>
+<p><img id="chroma" src="/assets/images/chroma.jpg" alt="Chroma Butterfly" /></p>
 </p>
         </div>
     </div>
