--- a/Chroma.html
+++ b/Chroma.html
@@ -172,6 +172,10 @@ span{
     font-size: 90;
     font-weight: bold;
 }
+
+.post_image{
+    max-width:500px;
+}
 </style>
 
 <head>
@@ -224,7 +228,7 @@ The multi-story garage isn’t closed in so we’re trapped but they’re free t
 
 <p>The Chromas sense when we’re together. Small as a butterfly. Shiny and blue. They’ll find you.</p>
 
-<p><img id="chroma" src="/assets/images/chroma.jpg" alt="Chroma Butterfly" /></p>
+<p><img class="post_image" src="/assets/images/chroma.jpg" alt="Chroma Butterfly" /></p>
 </p>
         </div>
     </div>
