Changed logo from png to jpg

--- a/404.html
+++ b/404.html
@@ -214,7 +214,7 @@
     <title>Stinger Stories</title> <!--Controls what shows up in the webpage tab. site.title is in the config file-->
     <div id="body-div">
         <div id="logo-div">
-            <img id="logo" src="assets/images/Logo.png" alt="Stinger Stories Logo">
+            <img id="logo" src="assets/images/Logo.jpg" alt="Stinger Stories Logo">
             <img id="logo-text" src="assets/images/Logo-text.png" alt="Stinger Stories Text">
         </div>
 
