--- a/about.html
+++ b/about.html
@@ -211,7 +211,7 @@ h2{
     <div id="body-div">
         <div id="logo-div">
             <h2>ABOUT</h2>
-            <img id="logo" src="https://stingerstories.com/assets/images/Logo.png" alt="Bee Logo">
+            <img id="logo" src="https://stingerstories.com/assets/images/Logo.jpg" alt="Bee Logo">
         </div>
 
         <div id="body-text-div">
