--- a/valerie-heaton.html
+++ b/valerie-heaton.html
@@ -210,7 +210,7 @@ h2{
 
         <div id="body-text-div">
 
-            <p id="description"> <p>Valerie Heaton is an artist in many mediums. She lives in Puppytown U.S.A where she dreams of adopting a golden doodle named Ranger, and about killer butterflies.</p>
+            <p id="description"> <p>Valerie Heaton is an artist in many mediums. She lives in Puppytown U.S.A. where she dreams of adopting a golden doodle named Ranger, and about killer butterflies.</p>
 </p>
             <h3>Posts</h3>
             <ul>
