--- a/submit.html
+++ b/submit.html
@@ -220,7 +220,7 @@ h2{
     <div id="body-div">
         <div id="logo-div">
             <h2>SUBMIT</h2>
-            <img id="logo" src="assets/images/Logo.png" alt="Bee Logo">
+            <img id="logo" src="assets/images/Logo.jpg" alt="Bee Logo">
         </div>
 
         <div id="body-text-div">
